name: flickr
version: 0.3.3
Synopsis: Haskell binding to the Flickr API
Description:
   The flickr API binding lets you access flickr.com's
   resources and methods from Haskell.
   .
   Implements the full API, as specified by <http://flickr.com/services/api/>
category      : Web
license       : BSD3
license-file  : LICENSE
author        : Sigbjorn Finne <sof@forkIO.com>
maintainer    : sof@forkIO.com
Homepage      : https://github.com/sof/flickr
cabal-version :  >= 1.2
build-type    : Simple
extra-source-files: README
                    examples/Uploader.hs
                    examples/Gallery.hs
                    examples/SearchPhotos.hs
                    examples/ShowPublicPhotos.hs
                    examples/ShowTags.hs

library
 Exposed-modules: Flickr.API,
                  Flickr.Monad,
                  Flickr.Types,
                  Flickr.Types.Import,
                  Flickr.Activity,
                  Flickr.Auth,
                  Flickr.Blogs,
                  Flickr.Contacts,
                  Flickr.Favorites,
                  Flickr.Groups,
                  Flickr.Groups.Pools,
                  Flickr.Interestingness,
                  Flickr.MachineTags,
                  Flickr.Prefs,
                  Flickr.People,
                  Flickr.Photos,
                  Flickr.Photos.Comments,
                  Flickr.Photos.Geo,
                  Flickr.Photos.Upload,
                  Flickr.Photos.Transform,
                  Flickr.Photos.Notes,
                  Flickr.Photos.Licenses,
                  Flickr.Photosets,
                  Flickr.Photosets.Comments,
                  Flickr.Places,
                  Flickr.Tags,
                  Flickr.Test,
                  Flickr.URLs,
                  Flickr.Utils,
                  Util.Fetch,
                  Util.Keys,
                  Util.MIME,
                  Util.Post,
                  Util.Authenticate,
                  Util.MD5,
                  Codec.Percent,
                  Codec.URLEncoder

-- Extra-libraries: curl, xml, HTTP, network
 Ghc-Options:     -Wall

 build-depends:   base >= 4
                , HTTP
                , network
                , xml, mime
                , random
                , utf8-string
                , filepath
                , network-uri
                , http-conduit
                , bytestring
                , text > 1.2
